--- a/client/layouts/MainLayout.html
+++ b/client/layouts/MainLayout.html
@@ -11,7 +11,7 @@
 			{{> Template.dynamic template=nav}}
 		</div>
 
-	    <div class ="middle container">
+	    <div class ="container">
 	   		{{> Template.dynamic template=main}}
 	   	</div>
    	</body>
