--- a/client/layouts/GraphLayout.html
+++ b/client/layouts/GraphLayout.html
@@ -4,7 +4,7 @@
       <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
    </head>
   
- <div class="row col 12">
+ <div class="margin row col 12">
       <div class="center col s6">
         <h5>UPS Graph</h5>
 <div id="graph">
@@ -25,7 +25,7 @@
       <table class="striped highlight centered">
         <thead>
           <tr>
-              <th data-field="zn">Zenith</th>
+              <th data-field="zn">Azimuth</th>
               <th data-field="Delta">Delta</th>
               <th data-field="ap_lat">AP Lat</th>
               <th data-field="ap_long">AP Long</th>
